--- a/subgraph.gnosis.yaml
+++ b/subgraph.gnosis.yaml
@@ -1,12 +1,12 @@
 specVersion: 0.0.4
-description: Swapr is a decentralized protocol for automated token exchange on Ethereum.
-repository: https://github.com/nicoelzer/swapr-subgraph
+description: Swapr is a decentralized protocol for automated tokens exchange on Ethereum.
+repository: https://github.com/SwaprHQ/swapr-v2-subgraph
 schema:
   file: ./schema.graphql
 dataSources:
   - kind: ethereum/contract
     name: Factory
-    network: xdai
+    network: gnosis
     source:
       address: '0x5D48C95AdfFD4B40c1AAADc4e08fc44117E02179'
       abi: Factory
@@ -33,7 +33,7 @@ dataSources:
           handler: handleNewPair
   - kind: ethereum/contract
     name: StakingRewardsFactory
-    network: xdai
+    network: gnosis
     source:
       address: '0xa039793Af0bb060c597362E8155a0327d9b8BEE8'
       abi: StakingRewardsFactory
@@ -62,7 +62,7 @@ dataSources:
 templates:
   - kind: ethereum/contract
     name: Pair
-    network: xdai
+    network: gnosis
     source:
       abi: Pair
     mapping:
@@ -97,7 +97,7 @@ templates:
           handler: handleSync
   - kind: ethereum/contract
     name: Distribution
-    network: xdai
+    network: gnosis
     source:
       abi: StakingRewardsDistribution
     mapping:
