--- a/package.json
+++ b/package.json
@@ -31,8 +31,8 @@
     "deploy:arbitrum-rinkeby": "graph deploy luzzif/swapr-arbitrum-rinkeby-v2 subgraph.arbitrum-rinkeby.yaml --ipfs https://api.thegraph.com/ipfs/ --node https://api.thegraph.com/deploy/ --debug"
   },
   "devDependencies": {
-    "@graphprotocol/graph-cli": "0.51.2",
-    "@graphprotocol/graph-ts": "^0.25.0",
+    "@graphprotocol/graph-cli": "^0.77.0",
+    "@graphprotocol/graph-ts": "^0.35.1",
     "@typescript-eslint/eslint-plugin": "^2.0.0",
     "@typescript-eslint/parser": "^2.0.0",
     "eslint": "^6.2.2",
