--- a/package.json
+++ b/package.json
@@ -5,30 +5,22 @@
   "license": "GPL-3.0-or-later",
   "scripts": {
     "codegen:mainnet": "graph codegen subgraph.mainnet.yaml --output-dir src/types/",
-    "codegen:rinkeby": "graph codegen subgraph.rinkeby.yaml --output-dir src/types/",
     "codegen:gnosis": "graph codegen subgraph.gnosis.yaml --output-dir src/types/",
-    "codegen:arbitrum-one": "graph codegen subgraph.arbitrum-one-old.yaml --output-dir src/types/",
-    "codegen:arbitrum-one-v2": "graph codegen subgraph.arbitrum-one.yaml --output-dir src/types/",
-    "codegen:arbitrum-rinkeby": "graph codegen subgraph.arbitrum-rinkeby.yaml --output-dir src/types/",
+    "codegen:arbitrum": "graph codegen subgraph.arbitrum-one.yaml --output-dir src/types/",
+    "codegen:rinkeby": "graph codegen subgraph.rinkeby.yaml --output-dir src/types/",
     "build:mainnet": "graph build subgraph.mainnet.yaml",
-    "build:rinkeby": "graph build subgraph.rinkeby.yaml",
     "build:gnosis": "graph build subgraph.gnosis.yaml",
-    "build:arbitrum-one": "graph build subgraph.arbitrum-one-old.yaml",
-    "build:arbitrum-one-v2": "graph build subgraph.arbitrum-one.yaml",
-    "build:arbitrum-rinkeby": "graph build subgraph.arbitrum-rinkeby.yaml",
+    "build:arbitrum": "graph build subgraph.arbitrum-one.yaml",
+    "build:rinkeby": "graph build subgraph.rinkeby.yaml",
     "create-local": "graph create nicoelzer/swapr --node http://127.0.0.1:8020",
-    "deploy-local:rinkeby": "graph deploy nicoelzer/swapr subgraph.rinkeby.yaml --debug --ipfs http://localhost:5001 --node http://127.0.0.1:8020",
     "deploy-local:mainnet": "graph deploy nicoelzer/swapr subgraph.rinkeby.yaml --debug --ipfs http://localhost:5001 --node http://127.0.0.1:8020",
     "deploy-local:gnosis": "graph deploy nicoelzer/swapr subgraph.gnosis.yaml --debug --ipfs http://localhost:5001 --node http://127.0.0.1:8020",
-    "deploy-local:arbitrum-one": "graph deploy nicoelzer/swapr subgraph.arbitrum-one-old.yaml --debug --ipfs http://localhost:5001 --node http://127.0.0.1:8020",
-    "deploy-local:arbitrum-one-v2": "graph deploy nicoelzer/swapr subgraph.arbitrum-one.yaml --debug --ipfs http://localhost:5001 --node http://127.0.0.1:8020",
-    "deploy:gnosis": "graph deploy --studio swapr-v2 0xF789AD82A2B142437413a872a8160608f963dEd8/swapr-v2-gnosis subgraph.gnosis.yaml --ipfs https://api.thegraph.com/ipfs/ --node https://api.studio.thegraph.com/deploy/ --version-label v0.0.1",
-    "deploy:rinkeby": "graph deploy swapr-v2 subgraph.rinkeby.yaml --studio swapr-v2 --ipfs https://api.thegraph.com/ipfs/ --node https://api.thegraph.com/deploy/ --debug",
-    "deploy:mainnet": "graph deploy luzzif/swapr-mainnet-v2 subgraph.mainnet.yaml --ipfs https://api.thegraph.com/ipfs/ --node https://api.thegraph.com/deploy/ --debug",
-    "deploy:arbitrum-one": "graph deploy luzzif/swapr-arbitrum-one subgraph.arbitrum-one-old.yaml --ipfs https://api.thegraph.com/ipfs/ --node https://api.thegraph.com/deploy/ --debug",
-    "deploy:arbitrum-one-v2": "graph deploy luzzif/swapr-arbitrum-one-v2 subgraph.arbitrum-one.yaml --ipfs https://api.thegraph.com/ipfs/ --node https://api.thegraph.com/deploy/ --debug",
-    "deploy:arbitrum-one-v3": "graph deploy luzzif/swapr-arbitrum-one-v3 subgraph.arbitrum-one.yaml --ipfs https://api.thegraph.com/ipfs/ --node https://api.thegraph.com/deploy/ --debug",
-    "deploy:arbitrum-rinkeby": "graph deploy luzzif/swapr-arbitrum-rinkeby-v2 subgraph.arbitrum-rinkeby.yaml --ipfs https://api.thegraph.com/ipfs/ --node https://api.thegraph.com/deploy/ --debug"
+    "deploy-local:arbitrum": "graph deploy nicoelzer/swapr subgraph.arbitrum-one.yaml --debug --ipfs http://localhost:5001 --node http://127.0.0.1:8020",
+    "deploy-local:rinkeby": "graph deploy nicoelzer/swapr subgraph.rinkeby.yaml --debug --ipfs http://localhost:5001 --node http://127.0.0.1:8020",
+    "deploy:gnosis": "graph deploy --studio swapr-v2-gnosis subgraph.gnosis.yaml",
+    "deploy:arbitrum": "graph deploy --studio swapr-v2-arbitrum subgraph.arbitrum-one.yaml",
+    "deploy:mainnet": "graph deploy --studio swapr-v2-mainnet subgraph.mainnet.yaml",
+    "deploy:rinkeby": "graph deploy swapr-v2 subgraph.rinkeby.yaml --studio swapr-v2 --ipfs https://api.thegraph.com/ipfs/ --node https://api.thegraph.com/deploy/ --debug"
   },
   "devDependencies": {
     "@graphprotocol/graph-cli": "^0.77.0",
